⚡pushing -> `pushing changes 05-29-24` | pushing PR..

--- a/src/components/pages/auth/login/login.styles.css
+++ b/src/components/pages/auth/login/login.styles.css
@@ -1,8 +1,7 @@
-/* ################################################################### */
-/*                         auth.styles.css                             */
-/* ################################################################### */
+/* ∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞ */
+/*                         login.styles.css                            */
+/* ∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞ */
 
-/* FormInputCard */
 .register-btn {
   @apply w-full py-3 px-4 inline-flex justify-center items-center
   gap-x-2 text-sm font-semibold rounded-lg border border-transparent
@@ -46,4 +45,4 @@
   dark:text-neutral-500 dark:before:border-neutral-700
   dark:after:border-neutral-700;
 }
-/* ################################################################### */
+/* ∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞ */
