--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,41 @@
 @tailwind utilities;
 /* ################################################################### */
 
+/* Custom CSS Variables for Text Shadows */
+:root {
+  --background-color: desperado-black; /* Light background */
+  --text-color: #333333; /* Dark text */
+  --text-shadow-tiny: 1px 1px 2px rgba(0, 0, 0, 0.35);
+  --text-shadow-sm: 1px 1px 2px rgba(0, 0, 0, 0.55);
+  --text-shadow-md: 1.5px 1.5px 3px rgba(0, 0, 0, 0.7);
+  --text-shadow-lg: 2px 2px 4px rgba(0, 0, 0, 0.75);
+  --text-shadow-xl: 2px 2px 5px rgba(0, 0, 0, 0.8);
+}
+
+/* Custom Text Shadow Utilities */
+.text-inset {
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5), -1px -1px 2px rgba(255, 255, 255, 0.5);
+}
+
+.j-text-shadow-tiny {
+  text-shadow: var(--text-shadow-tiny);
+}
+.j-text-shadow-sm {
+  text-shadow: var(--text-shadow-sm);
+}
+
+.j-text-shadow-md {
+  text-shadow: var(--text-shadow-md);
+}
+
+.j-text-shadow-lg {
+  text-shadow: var(--text-shadow-lg);
+}
+
+.j-text-shadow-xl {
+  text-shadow: var(--text-shadow-xl);
+}
+
 /* tailwind utilities ###################################################### */
 @layer utilities {
   .bg-finish-line {
@@ -16,20 +51,15 @@
     background-image: url("./assets/images/camo-image.png");
   }
 }
-/* END: tailwind utilities ################################################ */
 
-:root {
-  --background-color:                desperado-black; /* Light background */
-  --text-color:                      #333333; /* Dark text */
-/*   !* ################################################################### *! */
-}
+/* ∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞∞ */
 
 /* Font faces */
 @font-face {
   font-family: "Montserrat";
-  src:         url("assets/fonts/Montserrat/Montserrat-SemiBold.ttf") format("truetype");
+  src: url("assets/fonts/Montserrat/Montserrat-SemiBold.ttf") format("truetype");
   font-weight: auto;
-  font-style:  normal;
+  font-style: normal;
 }
 
 body {
